Added a robot png

--- a/matplotlib-tut/Untitled.ipynb
+++ b/matplotlib-tut/Untitled.ipynb
@@ -784,8 +784,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "003adee9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib.lines import Line2D\n",
+    "%matplotlib widget"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "e93e7142",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9bc60facbc024522a2fd3582628169e0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "fig = plt.figure()\n",
+    "ax = fig.add_axes([0.1,0.1,0.8,0.8])\n",
+    "line = Line2D([],[])\n",
+    "ax.add_line(line)\n",
+    "ax.set_xlim(0,5)\n",
+    "ax.set_ylim(0,10)\n",
+    "x = [1,2,3,4,5,6,7,8,9,10]\n",
+    "y = [5, 7, 8, 11, 13, 14,15,16,17,20]\n",
+    "a = [1,2]\n",
+    "b = [2,4]\n",
+    "line.set_data(a,b)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "65183838",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ax.set_xlim(1,7)\n",
+    "ax.set_ylim(2,12)\n",
+    "a.append(3)\n",
+    "a.append(4)\n",
+    "b.append(6)\n",
+    "b.append(8)\n",
+    "line.set_data(a,b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "8fd83d98",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d93ffa54",
    "metadata": {},
    "outputs": [],
    "source": []
